; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_TestCurve.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_TestCurve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kNumPoints = common dso_local global i32 0, align 4
@FLOAT_PRECISSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i32 (i32)*)* @TestCurve to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @TestCurve(i8* %0, i32* %1, i32 (i32)* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32 (i32)*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 (i32)* %2, i32 (i32)** %6, align 8
  store i32 1, i32* %7, align 4
  store i32 0, i32* %8, align 4
  br label %12

12:                                               ; preds = %38, %3
  %13 = load i32, i32* %8, align 4
  %14 = load i32, i32* @kNumPoints, align 4
  %15 = mul nsw i32 %14, 3
  %16 = icmp slt i32 %13, %15
  br i1 %16, label %17, label %41

17:                                               ; preds = %12
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* @kNumPoints, align 4
  %20 = mul nsw i32 %19, 3
  %21 = sub nsw i32 %20, 1
  %22 = sdiv i32 %18, %21
  store i32 %22, i32* %9, align 4
  %23 = load i32 (i32)*, i32 (i32)** %6, align 8
  %24 = load i32, i32* %9, align 4
  %25 = call i32 %23(i32 %24)
  store i32 %25, i32* %10, align 4
  %26 = call i32 (...) @DbgThread()
  %27 = load i32*, i32** %5, align 8
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @cmsEvalToneCurveFloat(i32 %26, i32* %27, i32 %28)
  store i32 %29, i32* %11, align 4
  %30 = load i8*, i8** %4, align 8
  %31 = load i32, i32* %10, align 4
  %32 = load i32, i32* %11, align 4
  %33 = load i32, i32* @FLOAT_PRECISSION, align 4
  %34 = call i32 @IsGoodVal(i8* %30, i32 %31, i32 %32, i32 %33)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %37, label %36

36:                                               ; preds = %17
  store i32 0, i32* %7, align 4
  br label %37

37:                                               ; preds = %36, %17
  br label %38

38:                                               ; preds = %37
  %39 = load i32, i32* %8, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %8, align 4
  br label %12

41:                                               ; preds = %12
  %42 = load i32, i32* %7, align 4
  ret i32 %42
}

declare dso_local i32 @cmsEvalToneCurveFloat(i32, i32*, i32) #1

declare dso_local i32 @DbgThread(...) #1

declare dso_local i32 @IsGoodVal(i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
